# collide

./: .gitignore  .travis.yml  LICENSE  README.md  collide.cabal
src/: Collide.hs
src/Collide/: Internal.hs
test/: CollideSpec.hs  VectorGen.hs
test/Collide/: InternalSpec.hs
