name:                collide
version:             0.1.0.0
synopsis:            Collision detection
description:
  Simple collision detection library designed to be as polymorphic as I could
  possibly make it. Designed around Edward Kmett's
  <http://hackage.haskell.org/package/linear linear> package but it should be
  possible to use it with other vector packages by defining the right class
  instances.
license:             MIT
license-file:        LICENSE
author:              Tom Savage
maintainer:          Tom Savage <tcsavage@gmail.com>
copyright:           Copyright © 2015 Tom Savage
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

source-repository head
  type: git
  location: git://github.com/tcsavage/collide.git

library
  exposed-modules:
    Collide
    Collide.Internal
  build-depends:
    base >=4.7 && <4.8,
    linear,
    lens
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall

test-suite hspec
  build-depends:
    base,
    hspec,
    linear,
    lens,
    QuickCheck
  default-language: Haskell2010
  hs-source-dirs:   src test
  main-is:          Spec.hs
  type:             exitcode-stdio-1.0